@@ -1,3 +1,8 @@
+2006-02-11 Borut Razem <borut.razem AT siol.net>
+
+	* src/SDCCmain.c: Added "sdcc: Calling linker..." if --verbose,
+	  print "Processor: xxx" message to stdout only if --verbose
+
 2006-02-11 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCglue.c (printIvalStruct): fixed bug 1426356 union initializer
@@ -31,7 +36,6 @@
 	* device/include/mcs51/c8051f320.h: see above, also added sfr16 definitions
 	* device/lib/printf_large.c (output_float): fixed bug 1388703
 	* support/regression/tests/bug1057979.c: added test for bug 1388703
-
 
 2006-02-08 Raphael Neider <rneider AT web.de>
 
